--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
 
                 <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top" alt="mdb logo">
                 </a>
 
@@ -54,19 +54,19 @@
                     <!-- Links -->
                     <ul class="navbar-nav my-2 my-lg-0 ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#intro">HOME</a>
+                            <a class="nav-link" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">ABOUT US</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#examples">ADMISSIONS</a>
+                            <a class="nav-link" href="admissions.html">ADMISSIONS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#gallery">GALLERY</a>
+                            <a class="nav-link" href="gallery.html">GALLERY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">CONTACT US</a>
+                            <a class="nav-link" href="contact.html">CONTACT US</a>
                         </li>
                     </ul>
                     <!-- Links -->
@@ -279,7 +279,7 @@
                 <!--Grid row-->
 
             </section>
-            <!--Section: Best Features-->
+            <!--Section-->
         </div>
 
     </main>
@@ -298,13 +298,10 @@
                     <div class="row">
                         <div class="col-6"><img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" alt="" class="img-fluid"></div>
                         <div class="col-6 pt-5">
-                            <!-- <h6 class="text-uppercase font-weight-bold">
-                                <strong>DE ATLAS MODEL SCHOOLS</strong>
-                            </h6> -->
+                        
                         </div>
                     </div>
 
-                    <!-- <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;"> -->
                     <p class="text-justify">De Atlas Model School offers
                         first-class education from the
                         foundation stage to
@@ -350,12 +347,6 @@
                         <a href="#!">GALLERY</a>
                     </p>
                 </div>
-                <!--/.Third column-->
-
-                <!--Fourth column-->
-
-                <!--/.Fourth column-->
-
             </div>
         </div>
         <!--/.Footer Links-->
