--- a/admissions.html
+++ b/admissions.html
@@ -108,7 +108,7 @@
         <div class="container">
 
             <!--Section-->
-            <section id="gallery text-center">
+            <section>
 
 
                 <!--Grid row-->
