--- a/gallery.html
+++ b/gallery.html
@@ -86,13 +86,13 @@
     </nav>
     <section>
         <!-- Card -->
-        <div class="card card-image cover-other-pages pt-0">
+        <div class="card card-image cover-admissions-page pt-0">
 
             <!-- Content -->
             <div class="text-white text-left d-flex align-items-center rgba-black-strong py-5 px-4">
                 <div>
 
-                    <h2 class="card-title pt-2 my-5 py-5 font-weight-bold">ABOUT US</h2>
+                    <h2 class="card-title pt-2 my-5 py-5 font-weight-bold">GALLERY</h2>
 
                 </div>
             </div>
@@ -110,107 +110,101 @@
             <!--Section-->
             <section>
 
+                <section class="mb-5">
 
-                <!--Grid row-->
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12 mb-4">
-                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">ABOUT DE ATLAS SCHOOLS
-                        </h2>
-                        <p class="text-justify about-us-color">Atlas Model School was established on 17th September,
-                            2017, with the main mission to build
-                            every child's core values and nurture their dreams through sound basic and secondary
-                            foundation in academics as well as other extracurricular activities, without one taking over
-                            the other. This school was born to strike a balance between the grounds of academics,
-                            character building and capacity building, which are the founding blocks of every child's
-                            career path. At De Atlas Model School, we foster our values through a well thought process
-                            of inter and intra personal relationships, creativity, the virtues of self-discipline,
-                            tolerance, love, fairness, judgement, self-reliance, integrity and self discipline in our
-                            students right from the start. While we do not have a system of rigid rules, our overall
-                            Code of Conduct is based on the need to ensure the security of the students as well as
-                            consideration for others and high standards of behaviour. Our school has no formal links to
-                            any religious denomination, though the school has always acknowledged its Christian
-                            tradition.</p>
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/1.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/2.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/3.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+
                     </div>
+                    <!--Grid row-->
+                    <!--Grid row-->
+                    <div class="row">
 
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/4.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/5.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/6.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
 
-                </div>
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12 mb-4">
-                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">VISION</h2>
-                        <p class="text-justify about-us-color">Being a citadel of learning beyond the present, in an
-                            open and welcoming atmosphere that builds children towards being global citizens. </p>
                     </div>
+                    <!--Grid row-->
+                    <!--Grid row-->
+                    <div class="row">
 
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/7.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/8.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
+                        <!--Grid column-->
+                        <div class="col-lg-4 col-md-4 mb-4">
+                            <img src="./img/De Atlas Images/9.jpg" class="img-fluid">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Grid column-->
 
-                </div>
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12 mb-4">
-                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">MISSION</h2>
-                        <p class="text-justify about-us-color">Provision of Wholistic, inclusive, Qualitative Education
-                            for every child. </p>
                     </div>
+                    <!--Grid row-->
 
 
-                </div>
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12 mb-4">
-                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">OUR STAND</h2>
-                        <p class="text-justify about-us-color">The school is inclusive for all and sundry. It is an
-                            entity that embraces all without bias for tribe or religion, neither is there creation of
-                            social strata amongst students. </p>
-                    </div>
-
-
-                </div>
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12 mb-4">
-                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">SCHOLARSHIP<br>
-                            PROGRAMME</h2>
-                        <p class="text-justify about-us-color">There is a scholarship board set up for those with a
-                            hunger to learn but sincerely have no means, funded by well meaning individuals across the
-                            globe.
-                            <br>Selection is strictly based on merit and is done by sponsors </p>
-                    </div>
-
-
-                </div>
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12 mb-4">
-                        <h2 class="mb-3 text-uppercase font-weight-bold about-us-title-color">OUR CORE<br>
-                            VALUES</h2>
-                        <p class="text-justify about-us-color">There is a scholarship board set up for those with a
-                            hunger to learn but sincerely have no means, funded by well meaning individuals across the
-                            globe.
-                            <br>Selection is strictly based on merit and is done by sponsors </p>
-                        <ul class="style-unordered-list">
-                            <li>Child Centredness
-                            </li>
-                            <li>Interpersonal Relationships
-                            </li>
-                            <li>Creativity
-                            </li>
-                            <li>Respect
-                            </li>
-                            <li>Integrity
-                            </li>
-                            <li>Excellence
-                            </li>
-                            <li>Entrepreneurship
-                            </li>
-                            <li>Service
-                            </li>
-                            <li>Sustainability</li>
-                        </ul>
-                    </div>
-
-
-                </div>
+                </section>
             </section>
         </div>
 
