--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="collapse navbar-collapse" id="basicExampleNav">
 
                     <!-- Links -->
-                    <ul class="navbar-nav my-2 my-lg-0 ml-auto">
+                    <ul class="navbar-nav my-2 my-lg-0 ml-auto white-text">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">HOME</a>
                         </li>
@@ -66,7 +66,8 @@
                             <a class="nav-link" href="gallery.html">GALLERY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">CONTACT US</a>
+                            <a class="nav-link is-nav-rounded is-active" href="contact.html">CONTACT US</a>
+
                         </li>
                     </ul>
                     <!-- Links -->
