REfactor styles on Page

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                         <a class="nav-link blue-text" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="about.html">ABOUT US</a>
+                        <a class="nav-link blue-text is-active" href="about.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link blue-text" href="admissions.html">ADMISSIONS</a>
