--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@
                         <a class="nav-link blue-text" href="admissions.html">ADMISSIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="gallery.html">GALLERY</a>
+                        <a class="nav-link blue-text is-active" href="gallery.html">GALLERY</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link blue-text" href="contact.html">CONTACT US</a>
