--- a/admissions.html
+++ b/admissions.html
@@ -68,7 +68,7 @@
                         <a class="nav-link blue-text" href="about.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="admissions.html">ADMISSIONS</a>
+                        <a class="nav-link blue-text is-active" href="admissions.html">ADMISSIONS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link blue-text" href="gallery.html">GALLERY</a>
