--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                         <a class="nav-link blue-text" href="gallery.html">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="contact.html">CONTACT US</a>
+                        <a class="nav-link blue-text is-active" href="contact.html">CONTACT US</a>
                     </li>
                 </ul>
                 <!-- Links -->
