REfactor styles on Page

--- a/admissions.html
+++ b/admissions.html
@@ -62,19 +62,19 @@
                 <!-- Links -->
                 <ul class="navbar-nav my-2 my-lg-0 ml-auto ">
                     <li class="nav-item ">
-                        <a class="nav-link blue-text" href="index.html">HOME</a>
+                        <a class="nav-link about-us-color" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="about.html">ABOUT US</a>
+                        <a class="nav-link about-us-color" href="about.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text is-active" href="admissions.html">ADMISSIONS</a>
+                        <a class="nav-link white-text is-active" href="admissions.html">ADMISSIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="gallery.html">GALLERY</a>
+                        <a class="nav-link about-us-color" href="gallery.html">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="contact.html">CONTACT US</a>
+                        <a class="nav-link about-us-color" href="contact.html">CONTACT US</a>
                     </li>
                 </ul>
                 <!-- Links -->
