--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <section class="cover text-center">
-        <nav class="navbar  navbar-dark navbar-expand-lg navbar-toggleable-md navbar-trans navbar-inverse">
+        <nav class="navbar  navbar-dark navbar-expand-lg navbar-toggleable-md navbar-trans navbar-inverse navbar-transparent">
             <div class="container">
 
                 <!-- Navbar brand -->
