--- a/about.html
+++ b/about.html
@@ -38,17 +38,29 @@
         <div class="container">
 
             <!-- Navbar brand -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-6  pl-0 pr-0"><a class="navbar-brand" href="index.html">
-                        <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top"
-                            alt="mdb logo">
+                        <a>
+                            <img src="./img/De Atlas Images/School Logo.png" height="70"
+                                class="d-inline-block align-top" alt="mdb logo">
 
-                    </a>
+                        </a>
                 </div>
+                
                 <div class="col-md-6">
                     <p class="text-uppercase  blue-text mb-0 pt2 ">De Atlas Model School</p>
                 </div>
-            </div>
+            </div> -->
+            <div class="d-flex flex-row">
+                <div class="p-2"><a class="navbar-brand" href="index.html">
+                    <a>
+                        <img src="./img/De Atlas Images/School Logo.png" height="70"
+                            class="d-inline-block align-top" alt="mdb logo">
+
+                    </a></div>
+                <div class="p-2 pt-3"><p class="text-uppercase  blue-text mb-0 pt2 ">De Atlas Model  <br>School</p></div>
+                
+              </div>
 
             <!-- Collapse button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -62,19 +74,19 @@
                 <!-- Links -->
                 <ul class="navbar-nav my-2 my-lg-0 ml-auto ">
                     <li class="nav-item ">
-                        <a class="nav-link blue-text" href="index.html">HOME</a>
+                        <a class="nav-link about-us-color" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text is-active" href="about.html">ABOUT US</a>
+                        <a class="nav-link white-text is-active" href="about.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="admissions.html">ADMISSIONS</a>
+                        <a class="nav-link about-us-color" href="admissions.html">ADMISSIONS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="gallery.html">GALLERY</a>
+                        <a class="nav-link about-us-color" href="gallery.html">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link blue-text" href="contact.html">CONTACT US</a>
+                        <a class="nav-link about-us-color" href="contact.html">CONTACT US</a>
                     </li>
                 </ul>
                 <!-- Links -->
