--- a/gallery.html
+++ b/gallery.html
@@ -38,17 +38,16 @@
         <div class="container">
 
             <!-- Navbar brand -->
-            <div class="row">
-                <div class="col-md-6  pl-0 pr-0"><a class="navbar-brand" href="index.html">
-                        <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top"
-                            alt="mdb logo">
+            <div class="d-flex flex-row">
+                <div class="p-2"><a class="navbar-brand" href="index.html">
+                    <a>
+                        <img src="./img/De Atlas Images/School Logo.png" height="70"
+                            class="d-inline-block align-top" alt="mdb logo">
 
-                    </a>
-                </div>
-                <div class="col-md-6">
-                    <p class="text-uppercase  blue-text mb-0 pt2 ">De Atlas Model School</p>
-                </div>
-            </div>
+                    </a></div>
+                <div class="p-2 pt-3"><p class="text-uppercase  blue-text mb-0 pt2 ">De Atlas Model  <br>School</p></div>
+                
+              </div>
 
             <!-- Collapse button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
