--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
             <div class="container">
 
                 <!-- Navbar brand -->
-                <a class="navbar-brand" href="index.html">
-                    <img src="./img/De Atlas Images/School Logo.png" height="70" class="d-inline-block align-top" alt="mdb logo">
-                </a>
+                <div class="d-flex flex-row">
+                    <div class="p-2"><a class="navbar-brand" href="index.html">
+                        <a>
+                            <img src="./img/De Atlas Images/School Logo.png" height="70"
+                                class="d-inline-block align-top" alt="mdb logo">
+    
+                        </a></div>
+                    <div class="p-2 pt-3"><p class="text-uppercase  white-text mb-0 pt2 ">De Atlas Model  <br>School</p></div>
+                    
+                  </div>
 
                 <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
