REfactor styles on Page

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                                 <input type="text" id="form2" class="form-control form-control-sm">
                                 <label for="form2">Email</label>
                             </div>
-                            <div class="md-form form-sm"> <i class="fas fa-envelope prefix"></i>
+                            <div class="md-form form-sm"> <i class="fas fa-phone prefix"></i>
                                 <input type="text" id="form20" class="form-control form-control-sm">
                                 <label for="form20">Mobile</label>
                             </div>
