REfactor styles on Page

--- a/contact.html
+++ b/contact.html
@@ -154,23 +154,15 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 mb-4">
+                <div class="col-md-12 mb-4 ml-5">
                     <h3 class="mb-5 font-weight-bold text-uppercase pink-text">our address</h3>
-                    <div class="row">
-                        <div class="col-md-2 pr-0 mr-0 ">
-                            <i class="fas fa-home"></i>
-                        </div>
-                        <div class="col-md-2">
-                            <p>
-                                De Atlas Model Schools,
-                                Ago Yusuf Community,
-                                Off Zuve - Ilogbo
-                                Eremi Road,
-                                Lagos. </p>
-                        </div>
-                    </div>
-
-
+                    <p>
+                        <i class="fas fa-home  mr-3"></i> De Atlas Model Schools,
+                        Ago Yusuf Community,<br>
+                        Off Zuve - Ilogbo
+                        Eremi Road,
+                        Lagos. </p>
+                    <p>
                 </div>
             </div>
         </div>
@@ -182,7 +174,7 @@
             </div>
         </div>
 
-
+        
     </main>
 
     <!--Main layout-->
