REfactor styles on Page

--- a/admissions.html
+++ b/admissions.html
@@ -195,16 +195,16 @@
                     </h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a href="#!">HOME</a>
+                        <a href="index.html">HOME</a>
                     </p>
                     <p>
-                        <a href="#!">ABOUT</a>
+                        <a href="about.html">ABOUT</a>
                     </p>
                     <p>
-                        <a href="#!">ADMISSIONS</a>
+                        <a href="admissions.html">ADMISSIONS</a>
                     </p>
                     <p>
-                        <a href="#!">GALLERY</a>
+                        <a href="gallery.html">GALLERY</a>
                     </p>
                 </div>
                 <!--/.Third column-->
