--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <h1 class="jumbotron-heading mt-5 pt-5 font-weight-bold"><strong>WELCOME TO DE ATLAS MODEL SCHOOLS </strong></h1>
                 <p class="lead">THE PLACE OF ACADEMIC EXCELLENCE</p>
                 
-                <button type="button" class="btn pink white-text button-radius">Learn more</button>
-                <button type="button" class="btn white pink-text button-radius">Admission</button>
+                <a type="button" class="btn pink white-text button-radius" href="about.html">Learn more</a>
+                <a type="button" class="btn white pink-text button-radius" href="admissions.html"> Admission</a>
 
             </div>
         </div>
@@ -344,16 +344,16 @@
                     </h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a href="#!">HOME</a>
+                        <a href="index.html">HOME</a>
                     </p>
                     <p>
-                        <a href="#!">ABOUT</a>
+                        <a href="about.html">ABOUT</a>
                     </p>
                     <p>
-                        <a href="#!">ADMISSIONS</a>
+                        <a href="admissions.html">ADMISSIONS</a>
                     </p>
                     <p>
-                        <a href="#!">GALLERY</a>
+                        <a href="gallery.html">GALLERY</a>
                     </p>
                 </div>
             </div>
