Add testimonials carousel

--- a/index.html
+++ b/index.html
@@ -318,6 +318,33 @@
                                             first visit to the school to learn about their ciriculum and offerings.</p>
                                         <p class="overview">Mr Opeyemi Emmanuel(Parent)</p>
                                     </div>
+                                    <div class="item carousel-item">
+
+                                        <p class="testimonial">They've got a lovely enviroment and facilities.</p>
+                                        <p class="overview">Mrs. Temitope Esther (Parent)</p>
+                                    </div>
+                                    <div class="item carousel-item">
+
+                                        <p class="testimonial">Atlas schools truely stands out amongs the other schools
+                                            in the neighbourhood. One thing i love about them is the way the students
+                                            are adressed and taught.</p>
+                                        <p class="overview">Mr Chinedu Nnamdi (Parent)</p>
+                                    </div>
+                                    <div class="item carousel-item">
+
+                                        <p class="testimonial">The teachers and admin instilled core values of
+                                            discipline, hard work and honesty into the children.</p>
+                                        <p class="overview">Mrs. Blessing Fadola (Parent)</p>
+                                    </div>
+                                    <div class="item carousel-item">
+
+                                        <p class="testimonial">When I was deciding which school to choose for my
+                                            hyperactive twins, initially I settled for another option. But as soon as
+                                            I’ve heard my friend telling me about how great her experience was with
+                                            Atlas schools, I was swayed and decided it had to be atlas school for my
+                                            kids.</p>
+                                        <p class="overview">Mrs. Osibo Oghenetega (Parent)</p>
+                                    </div>
                                 </div>
                                 <!-- Carousel controls -->
                                 <a class="carousel-control left carousel-control-prev" href="#myCarousel"
