--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
                 <!--Carousel Wrapper-->
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-8 col-center m-auto">
-                            <h2 class="md-5 font-weight-bold text-center text-uppercase text-info pb-5">TESTIMONIALS
+                        <div class="col-md-8 col-center mt-5">
+                            <h2 class="md-5 font-weight-bold text-center text-uppercase text-info pb-1">TESTIMONIALS
                             </h2>
                             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                                 <!-- Carousel indicators -->
@@ -313,7 +313,6 @@
                                         <p class="overview">Mr Oduguwa T.V(Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
-
                                         <p class="testimonial">Atlas School is a lovely school. i was impressed on my
                                             first visit to the school to learn about their ciriculum and offerings.</p>
                                         <p class="overview">Mr Opeyemi Emmanuel(Parent)</p>
