Add testimonials carousel

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                     <li data-target="#myCarousel" data-slide-to="6"></li>
                                 </ol>
                                 <!-- Wrapper for carousel items -->
-                                <div class="carousel-inner">
+                                <div class="carousel-inner h-200">
                                     <div class="item carousel-item active">
 
                                         <p class="testimonial">De Atlas Model Schools is one of the best schools that
@@ -302,7 +302,7 @@
                                             diligent and dependable teachers and their students/ Pupils are very sound
                                             with a well secured and decent environment for effective learning. I have
                                             been enjoying the school.</p>
-                                        <p class="overview">Mrs Kareem(Parent)</p>
+                                        <p class="overview h4 text-info pb-2">Mrs Kareem(Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
@@ -310,30 +310,30 @@
                                             so many lives and changed many pupils for a better future, academically,
                                             morally and spiritually. My kids are also living testimony that they are
                                             independent and are now stable academically.</p>
-                                        <p class="overview">Mr Oduguwa T.V(Parent)</p>
+                                        <p class="overview h4 text-info pb-2">Mr Oduguwa T.V(Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
                                         <p class="testimonial">Atlas School is a lovely school. i was impressed on my
                                             first visit to the school to learn about their ciriculum and offerings.</p>
-                                        <p class="overview">Mr Opeyemi Emmanuel(Parent)</p>
+                                        <p class="overview h4 text-info pb-2">Mr Opeyemi Emmanuel(Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
                                         <p class="testimonial">They've got a lovely enviroment and facilities.</p>
-                                        <p class="overview">Mrs. Temitope Esther (Parent)</p>
+                                        <p class="overview h4 text-info pb-2">Mrs. Temitope Esther (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
                                         <p class="testimonial">Atlas schools truely stands out amongs the other schools
                                             in the neighbourhood. One thing i love about them is the way the students
                                             are adressed and taught.</p>
-                                        <p class="overview">Mr Chinedu Nnamdi (Parent)</p>
+                                        <p class="overview h4 text-info pb-2">Mr Chinedu Nnamdi (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
                                         <p class="testimonial">The teachers and admin instilled core values of
                                             discipline, hard work and honesty into the children.</p>
-                                        <p class="overview">Mrs. Blessing Fadola (Parent)</p>
+                                        <p class="overview h4 text-info pb-2">Mrs. Blessing Fadola (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
@@ -342,7 +342,7 @@
                                             I’ve heard my friend telling me about how great her experience was with
                                             Atlas schools, I was swayed and decided it had to be atlas school for my
                                             kids.</p>
-                                        <p class="overview">Mrs. Osibo Oghenetega (Parent)</p>
+                                        <p class="overview h4 text-info pb-2">Mrs. Osibo Oghenetega (Parent)</p>
                                     </div>
                                 </div>
                                 <!-- Carousel controls -->
