--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
                         <div class="col-md-8 col-center mt-5">
                             <h2 class="md-5 font-weight-bold text-center text-uppercase text-info pb-1">TESTIMONIALS
                             </h2>
-                            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                            <div id="myCarousel" class="carousel slide mt-2" data-ride="carousel">
                                 <!-- Carousel indicators -->
-                                <ol class="carousel-indicators">
+                                <ol class="carousel-indicators"> 
                                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                                     <li data-target="#myCarousel" data-slide-to="1"></li>
                                     <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -294,7 +294,7 @@
                                     <li data-target="#myCarousel" data-slide-to="6"></li>
                                 </ol>
                                 <!-- Wrapper for carousel items -->
-                                <div class="carousel-inner h-200">
+                                <div class="carousel-inner ">
                                     <div class="item carousel-item active">
 
                                         <p class="testimonial">De Atlas Model Schools is one of the best schools that
