--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
             <section class="text-center">
 
                 <!-- Heading -->
-                <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color">About Us</h2>
+                <h2 class="mb-5 mt-10 font-weight-bold text-center about-us-color text-uppercase">About Us</h2>
 
-                <!--Grid row-->
+                <!--Grid row--> 
                 <div class="row">
                     <!--Grid column-->
                     <div class="col-md-6 mb-4">
                         <h4 class="mb-3 text-uppercase text-info "><strong>Who we are</strong></h4>
-                        <p class="text-justify">We are goal-oriented and strive for continuous improvement in teaching
+                        <p class="text-justify text-description">We are goal-oriented and strive for continuous improvement in teaching
                             and learning. We value
                             not only academic success, but we also encourage talents of all kinds whether in the arts,
                             drama, music or sports. Our view is that a kind, respectful and helpful pupil, who has a
