--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <!--Grid column-->
                     <div class="col-md-6 mb-5 mt-5 pt-4">
                         <h4 class="mb-3 text-uppercase text-info"><strong>Our Students</strong></h4>
-                        <p class="text-justify">Our students are trained with the aim of developing a high level of
+                        <p class="text-justify text-description">Our students are trained with the aim of developing a high level of
                             self-esteem and
                             self-confidence wherever they might find themselves in the future.They are engaged and taugh
                             using accredited nigeria curicullum for primary schools and taught by experienced staff you
