--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             ensure our students are trained up to international standards so as to stand out among their
                             peers no matter where they find themselves.</p>
                         <div class="row">
-                            <div class="col-12"><button class="btn btn-primary float-right button-radius">Register
+                            <div class="col-12"><button class="btn btn-custom float-right button-radius white-text">Register
                                     Now</button></div>
 
                         </div>
