--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
+                        <div class="container-fluid program-background">
                             <h4 class="text-center white-text py-2 my-0">CRECHE</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
@@ -199,7 +199,7 @@
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
+                        <div class="container-fluid program-background">
                             <h4 class="text-center white-text py-2 my-0">NURSERY</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
@@ -213,7 +213,7 @@
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
+                        <div class="container-fluid program-background">
                             <h4 class="text-center white-text py-2 my-0">PRIMARY</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
@@ -228,7 +228,7 @@
 
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
-                        <div class="container-fluid primary-color">
+                        <div class="container-fluid program-background">
                             <h4 class="text-center white-text py-2 my-0">SECONDARY</h4>
                         </div>
                         <div class="view overlay z-depth-1-half">
@@ -247,7 +247,7 @@
             </section>
             <!--Section: Our School-->
         </div>
-        <div class="container-fluid pink pt-5 pb-5">
+        <div class="container-fluid why-background pt-5 pb-5">
             <section class='text-center pb-5'>
                 <h2 class="mb-3 pt-5 pb-5 font-weight-bold text-center white-text">WHY DE ATLAS MODEL SCHOOL</h2>
                 <div class="row ml-5 mr-5">
@@ -297,7 +297,7 @@
                                 <div class="carousel-inner ">
                                     <div class="item carousel-item active">
 
-                                        <p class="testimonial">De Atlas Model Schools is one of the best schools that
+                                        <p class="testimonial text-description">De Atlas Model Schools is one of the best schools that
                                             we parents can guarantee for any wise parent because they have qualified,
                                             diligent and dependable teachers and their students/ Pupils are very sound
                                             with a well secured and decent environment for effective learning. I have
@@ -306,38 +306,38 @@
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial">De-atlas Model school has been a school that has touched
+                                        <p class="testimonial text-description">De-atlas Model school has been a school that has touched
                                             so many lives and changed many pupils for a better future, academically,
                                             morally and spiritually. My kids are also living testimony that they are
                                             independent and are now stable academically.</p>
                                         <p class="overview h4 text-info pb-2">Mr Oduguwa T.V (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
-                                        <p class="testimonial">Atlas School is a lovely school. i was impressed on my
+                                        <p class="testimonial text-description">Atlas School is a lovely school. i was impressed on my
                                             first visit to the school to learn about their ciriculum and offerings.</p>
                                         <p class="overview h4 text-info pb-2">Mr Opeyemi Emmanuel (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial">They've got a lovely enviroment and facilities.</p>
+                                        <p class="testimonial text-description">They've got a lovely enviroment and facilities.</p>
                                         <p class="overview h4 text-info pb-2">Mrs. Temitope Esther (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial">Atlas schools truely stands out amongs the other schools
+                                        <p class="testimonial text-description">Atlas schools truely stands out amongs the other schools
                                             in the neighbourhood. One thing i love about them is the way the students
                                             are adressed and taught.</p>
                                         <p class="overview h4 text-info pb-2">Mr Chinedu Nnamdi (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial">The teachers and admin instilled core values of
+                                        <p class="testimonial text-description">The teachers and admin instilled core values of
                                             discipline, hard work and honesty into the children.</p>
                                         <p class="overview h4 text-info pb-2">Mrs. Blessing Fadola (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial">When I was deciding which school to choose for my
+                                        <p class="testimonial text-description">When I was deciding which school to choose for my
                                             hyperactive twins, initially I settled for another option. But as soon as
                                             I’ve heard my friend telling me about how great her experience was with
                                             Atlas schools, I was swayed and decided it had to be atlas school for my
