--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
     <link rel="stylesheet" href="css/mdb.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -117,7 +117,7 @@
                 <div class="row">
                     <!--Grid column-->
                     <div class="col-md-6 mb-4">
-                        <h4 class="mb-3 text-uppercase text-info "><strong>Who we are</strong></h4>
+                        <div class="mb-3 text-uppercase text-info font-weight-bold h2">Who we are</div>
                         <p class="text-justify text-description">We are goal-oriented and strive for continuous improvement in teaching
                             and learning. We value
                             not only academic success, but we also encourage talents of all kinds whether in the arts,
@@ -155,7 +155,7 @@
                     <!--Grid column-->
                     <!--Grid column-->
                     <div class="col-md-6 mb-5 mt-5 pt-4">
-                        <h4 class="mb-3 text-uppercase text-info"><strong>Our Students</strong></h4>
+                        <div class="mb-3 text-uppercase text-info font-weight-bold h2">Our Students</div>
                         <p class="text-justify text-description">Our students are trained with the aim of developing a high level of
                             self-esteem and
                             self-confidence wherever they might find themselves in the future.They are engaged and taugh
